# chongming

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml  database.db  deploy.sh  dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt  scheduler_jobs.db
public/: config.toml  main.py  server.py
public/utils/: config.py  launch.py
src/chongming/: __init__.py
src/chongming-web/: README.md  package-lock.json  package.json  vite.config.ts
src/chongming-web/src/: App.vue  main.ts
src/chongming-web/src/router/: index.ts
src/chongming-web/src/stores/: auth.ts  todo.ts
src/chongming-web/src/views/: LoginView.vue  RegisterView.vue  TodoView.vue
src/chongming/app/: __init__.py
src/chongming/app/api/: __init__.py  deps.py
src/chongming/app/api/routers/: auth.py  permission.py  role.py  todo.py  upload.py
src/chongming/app/constant/permission/: __init__.py  permission_mgt.py  personnel.py  role.py  system_config.py  todo.py
src/chongming/app/core/: cache.py  config.py  constant.py  database.py  jwt_cache.py  logger.py  scheduler.py  security.py  static_files.py
src/chongming/app/model/: __init__.py  http_error.py  permission.py  relationship_table.py  role.py  todo.py  user.py
src/chongming/app/service/: auth.py  permission.py  role.py  todo.py  uploads.py  user.py
src/chongming/app/task/: __init__.py  dev_init_db.py  execute_background.py
src/chongming/scripts/: build.py  clean_pycache.py  code_content.py
src/plugins/jwt/: jwt_cache.py
src/plugins/scheduler/: scheduler.py
