[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chongming"
version = "0.1.0"
description = "基于 modules-bank 的 fastapi 打包脚手架"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiosqlite",
    "bcrypt==4.0.1",
    "fastapi[uvicorn]",
    "module-bank",
    "passlib[bcrypt]",
    "pyjwt",
    "sqlite-vfs",
    "sqlitedict",
    "sqlmodel[aiosqlite]",
    "tomli",
    "typing-extensions",
    "uvicorn",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/web/simple/"

[dependency-groups]
dev = [
    "pyarmor",
    "pyinstaller",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chongming"]

[project.scripts]
build = "chongming.scripts.build:build"
serve = "chongming:serve"