[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chongming"
version = "0.1.0"
description = "基于 modules-bank 的 fastapi 打包脚手架"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite",
    "apscheduler",
    "bcrypt==4.0.1",
    "diskcache",
    "fastapi[uvicorn]",
    "gunicorn>=23.0.0",
    "module-bank",
    "passlib[bcrypt]",
    "pyjwt",
    "python-multipart>=0.0.20",
    "sqlite-vfs",
    "sqlmodel[aiosqlite]",
    "tomli",
    "typing-extensions",
    "uvicorn",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/web/simple/"

[dependency-groups]
dev = [
    "pyarmor",
    "pyinstaller",
    "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chongming"]

[project.scripts]
build = "chongming.scripts.build:build"
serve = "chongming:serve"
